--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,15 @@
 :target {
     display: block;
 }
+
+.tsd-anchor-icon {
+    display: none;
+}
+
+.docblock {
+    --code-background: #f5f5f5;
+}
+
+.docblock pre > button {
+    display: none;
+}
