Hide rustdoc-specific help texts

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -14,6 +14,14 @@
   display: none;
 }
 
+rustdoc-toolbar #help-button .shortcuts {
+  width: 100%;
+}
+
+rustdoc-toolbar #help-button .info {
+  display: none;
+}
+
 oxide-search-results .search-results.active {
   display: table;
   width: 100%;
