--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -18,7 +18,7 @@ rustdoc-toolbar #help-button .shortcuts {
   width: 100%;
 }
 
-rustdoc-toolbar #help-button .info {
+rustdoc-toolbar #help-button .infos {
   display: none;
 }
 
