--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -8,45 +8,52 @@
 
 .docblock {
   --code-background: var(--code-block-background-color);
+
+  pre > button {
+    display: none;
+  }
 }
 
-.docblock pre > button {
-  display: none;
+rustdoc-toolbar #help-button {
+  .shortcuts {
+    width: 100%;
+  }
+
+  .infos {
+    display: none;
+  }
 }
 
-rustdoc-toolbar #help-button .shortcuts {
-  width: 100%;
-}
-
-rustdoc-toolbar #help-button .infos {
-  display: none;
-}
-
-/* TODO: rewrite with css grid */
 oxide-search-results .search-results.active {
-  display: table;
-  width: 100%;
-}
+  display: grid;
+  grid-template-columns: min-content 1fr;
 
-oxide-search-results .search-results.active > a {
-  display: table-row;
-}
+  > .result-item {
+    display: grid;
+    grid-template-areas: none;
+    grid-template-columns: subgrid;
+    grid-column: 1 / 3;
+  }
 
-oxide-search-results .search-results.active .result-name {
-  display: table-cell;
-  border-bottom: 1px solid var(--search-result-border-color);
-}
+  .result-name {
+    display: grid;
+    grid-template-columns: subgrid;
+    grid-column: 1 / 3;
+    /* align-items: initial; */
 
-oxide-search-results .search-results.active .result-name .typename {
-  white-space: nowrap;
-  padding-right: 1.5rem;
-}
+    .typename {
+      grid-column: 1 / 2;
+      width: auto;
+      white-space: nowrap;
+      /* line-height: 1.5rem; */
+    }
 
-oxide-search-results .search-results.active .result-name .path span {
-  display: inline-block;
-}
+    .path {
+      grid-column: 2 / 3;
 
-oxide-search-results .search-results.active .result-name:first-child {
-  width: 1px;
-  vertical-align: middle;
+      span {
+        display: inline-block;
+      }
+    }
+  }
 }
