--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -14,16 +14,16 @@ a.token, span.token {
   color: var(--main-color);
 }
 
-a.property, span.property {
-  color: var(--code-highlight-kw-color);
-}
-
 .tsd-anchor-icon {
   display: none;
 }
 
 .impl-items > .toggle > summary + .docblock:empty {
   margin-bottom: -0.75em;
+}
+
+.structfield {
+  --code-background: none;
 }
 
 .docblock {
